Improved Mobs 1.6.3
================
- Fix attribute nullpointer crash (#28)
- Added CoroUtil repairing block support. Broken blocks by mobs now regen after a while
- Changed pathfinding ai: Mobs now prioritize paths where they dont have to break blocks. 
	Fixes problems where e.g. dirt is added to break list and mobs digging through the land

Improved Mobs 1.6.2
================
- Fix ridden guardian boats crashing with non EntityMob 

Improved Mobs 1.6.1
================
- Fix empty list in equipment.json crash (#25)
- Made it so wrong item names errors instead of crashing
- Fix unneccessary casts in command

Improved Mobs 1.6.0
================
- Updated the command. Now possible to reload equipment.json ingame.
- Added config for difficulty text scaling
- Added nbt support for equipment. Syntax is: <item>{NBT}:weight
- Added config to round hp values
- Complete overhaul of the mob black/whitelists. Back up your configs!

Improved Mobs 1.5.3
================
- Changed the equipment picker to a weighted based configurable list instead of internal coded values (equipment.json)
- Config changes. You should backup and delete your config.
	- "itemUseBlackList" removed. Use the weighted list
	- "equipmentBlacklist" changed to "equipmentModBlacklist". To blacklist all items from a mod. For individual items use the weighted list
		- "equipmentWhitelist" changed to "equipmentModWhitelist"
	- "armorMobBlacklist" changed to "equipMobBlacklist". Applies to all equipment (armor, held items) instead of just armor.
		- "armorMobWhiteList" changed to "equipMobWhiteList"
	- "baseItemChanceAdd" added for "baseItemChance". Applies to off hand items. Like ender pearls

Improved Mobs 1.5.2
================
- fix #21 and #22

Improved Mobs 1.5.1
================
- fix additional armor not equiping

Improved Mobs 1.5.0
================
- Added magic resistance properties to mobs. Reduces all magic damage by x %.