@@ -28,6 +28,8 @@ public class BreakableBlocks implements IConfigArrayValue<BreakableBlocks> {
 	public boolean canBreak(IBlockState state) {
 		if(state.getMaterial() == Material.AIR || ConfigHandler.useCoroUtil && state.getBlock() instanceof BlockRepairingBlock)
 			return false;
+		if(!ConfigHandler.breakTileEntities && state.getBlock().hasTileEntity(state))
+			return false;
 		if(ConfigHandler.breakingAsBlacklist){
 			return !blocks.contains(state.getBlock().getRegistryName().toString());
 		}
