@@ -1,9 +1,11 @@
 Improved Mobs 1.6.3
 ================
 - Fix attribute nullpointer crash (#28)
-- Added CoroUtil repairing block support. Broken blocks by mobs now regen after a while
+- Added CoroUtil repairing block support. Broken blocks by mobs now regen after a while (configurable time)
+- Fixed entities using wrong hand to break blocks
 - Changed pathfinding ai: Mobs now prioritize paths where they dont have to break blocks. 
 	Fixes problems where e.g. dirt is added to break list and mobs digging through the land
+- Added several config options: Difficulty Break AI, Difficulty Steal AI, Break Tiles, Stealer Chance
 
 Improved Mobs 1.6.2
 ================
